--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,5 +1,6 @@
 {
-	"title": "Jesus Ordosgoitty",
+    "app_title": "Jesús Ordosgoitty",
+	"title": "Jesús Ordosgoitty",
 	"salute": "Hola!, Soy un ",
 	"position": "Desarrollador Frontend",
 	"bio": "con más de 5 años de experiencia como desarrollador web trabajando con ReactJS, NodeJS y Laravel. Experiencia en equipos ágiles, depuración y optimización de aplicaciones web."
