--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -3,5 +3,9 @@
 	"title": "Jesús Ordosgoitty",
 	"salute": "Hola!, Soy un ",
 	"position": "Desarrollador Frontend",
-	"bio": "con más de 5 años de experiencia como desarrollador web trabajando con ReactJS, NodeJS y Laravel. Experiencia en equipos ágiles, depuración y optimización de aplicaciones web."
+	"bio": "con más de 5 años de experiencia como desarrollador web trabajando con ReactJS, NodeJS y Laravel. Experiencia en equipos ágiles, depuración y optimización de aplicaciones web.",
+    "footer": {
+        "intro": "Este sitio es de ",
+        "link": "código abierto."
+    }
 }
