finish building site of projects page

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,5 +7,6 @@
     "footer": {
         "intro": "This website is ",
         "link": "open source."
-    }
+    },
+    "building": "Currently building this page!"
 }
