--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -7,5 +7,6 @@
     "footer": {
         "intro": "Este sitio es de ",
         "link": "código abierto."
-    }
+    },
+    "building": "Actualmente construyo ésta página!"
 }
