--- a/public/locales/es/projects.json
+++ b/public/locales/es/projects.json
@@ -1,3 +1,4 @@
 {
-    "page_description": "A selection of my best works"
+    "page_title": "Proyectos",
+    "page_description": "Una selección de mis mejores trabajos."
 }
