--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -2,5 +2,27 @@
     "page_title": "About me",
     "brief": "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.",
     "bio": "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. ",
-    "works": "Works"
+    "works": "Work experience",
+    "works_array": [
+        {
+            "business_name": "Alaxatech, Digital Agency",
+            "years": "Oct. 2022 ― Jul. 2023",
+            "position": "Frontend Developer"
+        },
+        {
+            "business_name": "Alaxatech, Digital Agency",
+            "years": "Jan. 2021 ― Jul. 2023",
+            "position": "FullStack Developer"
+        },
+        {
+            "business_name": "Bermudez Municipality Government Office",
+            "years": "Oct. 2022 ― Jul. 2023",
+            "position": "Developer and IT Support"
+        },
+        {
+            "business_name": "Bermudez Municipality Government Office",
+            "years": "Nov. 2020 ― Nov. 2021",
+            "position": "Head of Web Development & Digital Marketing"
+        }
+    ]
 }
