add skills in bio

--- a/public/locales/es/about.json
+++ b/public/locales/es/about.json
@@ -2,6 +2,7 @@
     "page_title": "Sobre mí",
     "bio": "¡Hola! Mi nombre es Jesús Ordosgoitty.\n\n Me considero un desarrollador Full―Stack enfocado en el Frontend con más de 4 años de experiencia en el campo. Me gusta aprender cosas nuevas y mantenerme actualizado en el mundo de la programación. Me gusta trabajar en proyectos ambiciosos junto a profesionales que se preocupan tanto por la calidad del desarrollo de software como yo. Por eso, siempre busco nuevas formas de mejorar mis habilidades.",
     "works": "Experiencia laboral",
+    "skills": "Tech preferidas",
     "experiences": [
         {
             "business_name": "Alaxatech, Agencia Digital",
