--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,6 +2,8 @@
     "app_title": "Jesus Ordosgoitty",
 	"title": "Jesus Ordosgoitty",
 	"salute": "Hi!, I'm a ",
+    "About": "About",
+    "Projects": "Projects",
 	"position": "Frontend developer",
 	"bio": "with 5+ years of experience as a Web Developer working with ReactJS, NodeJS, and Laravel. Experienced in agile teams, debugging, and optimizing web applications.",
     "footer": {
