--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -2,6 +2,8 @@
     "app_title": "Jesús Ordosgoitty",
 	"title": "Jesús Ordosgoitty",
 	"salute": "Hola!, Soy un ",
+    "About": "Sobre mí",
+    "Projects": "Proyectos",
 	"position": "Desarrollador Frontend",
 	"bio": "con más de 5 años de experiencia como desarrollador web trabajando con ReactJS, NodeJS y Laravel. Experiencia en equipos ágiles, depuración y optimización de aplicaciones web.",
     "footer": {
