--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -4,8 +4,8 @@
 	"salute": "Hola!, Soy un ",
     "About": "Sobre mí",
     "Projects": "Proyectos",
-	"position": "Desarrollador Frontend",
-	"bio": "con más de 5 años de experiencia como desarrollador web trabajando con ReactJS, NodeJS y Laravel. Experiencia en equipos ágiles, depuración y optimización de aplicaciones web.",
+	"position": "Desarrollador",
+	"bio": "con más de 4 años de experiencia como desarrollador web trabajando con ReactJS, NodeJS y Laravel. Experiencia en equipos ágiles, depuración y optimización de aplicaciones web.",
     "footer": {
         "intro": "Este sitio es de ",
         "link": "código abierto."
