fix translations and dates

--- a/public/locales/es/about.json
+++ b/public/locales/es/about.json
@@ -21,8 +21,8 @@
             "business_name": "Oficina de Gobierno del Municipio Bermúdez",
             "positions": [
                 {
-                    "years": "Oct. 2022 ― Jul. 2023",
-                    "title": "Desarrollador y Soporte de TI"
+                    "years": "Sep. 2019 ― Oct. 2022",
+                    "title": "Desarrollador y Soporte Técnico"
                 },
                 {
                     "years": "Nov. 2020 ― Nov. 2021",
