--- a/public/locales/en/projects.json
+++ b/public/locales/en/projects.json
@@ -1,6 +1,6 @@
 {
     "page_title": "Projects",
-    "page_description": "A selection of my best works",
+    "page_description": "A selection of my best works - Currently building!",
     "projects": [
         {
             "name": "Circuito1App",
