--- a/public/locales/es/projects.json
+++ b/public/locales/es/projects.json
@@ -3,6 +3,24 @@
     "page_description": "Una selección de mis mejores trabajos  - Página en construcción!",
     "projects": [
         {
+            "name": "VanguardDevs",
+            "description": "Plantilla de sitio web diseñada para una agencia, con un mapa de la ubicación y mostrando los servicios admitidos.",
+            "href": "https://www.vanguards.dev",
+            "github": "https://github.com/VanguardDevs/vanguards.dev",
+            "picture": "/images/projects/VanguardDevs.png"
+        },
+        {
+            "name": "MiRewards",
+            "description": "Rediseño de un sitio web para una agencia (Stampfeet), con un enfoque en apoyar un proceso de redención de recompensas y localización.",
+            "picture": "/images/projects/MiRewards.png",
+            "href": "https://mi-rewards.com/"
+        },
+        {
+            "name": "Approbado",
+            "description": "Approbado es una aplicación web que ofrece una experiencia de aprendizaje electrónica gamificada basada en preguntas sobre temas relacionados con abogados.",
+            "picture": "/images/npm.webp"
+        },
+        {
             "name": "Circuito1App",
             "description": "C1A (CircuitoUnoApp) es una aplicación web construida como PWA, cuyo objetivo es registrar y rastrear el flujo de votantes en cinco gobiernos locales del Estado Sucre durante las elecciones parlamentarias venezolanas (2020).",
             "picture": "/images/npm.webp",
@@ -14,6 +32,29 @@
             "description": "SAI es una aplicación web diseñada para optimizar y mejorar la gestión de servicios de atención social. Proporciona estadísticas y gráficos de asistencias para la toma de decisiones informadas y la asignación de recursos.",
             "github": "https://github.com/jodaz/sai-frontend",
             "picture": "/images/npm.webp"
+        },
+        {
+            "name": "Sauco",
+            "description": "SAUCO es una plataforma CRM diseñada para la recolección y gestión de impuestos.",
+            "github": "https://github.com/VanguardDevs/sauco",
+            "picture": "/images/npm.webp"
+        },
+        {
+            "name": "TinderDogs Frontend",
+            "description": "TinderDogs fue una aplicación única inspirada en la funcionalidad de Tinder. Diseñada para conectar amantes de mascotas y negocios locales de mascotas, esta plataforma ofrece una variedad de funciones para mejorar la experiencia de propiedad de mascotas.",
+            "picture": "/images/npm.webp"
+        },
+        {
+            "name": "Perrfecto Frontend",
+            "description": "Perrfecto es una aplicación de redes sociales inspirada en Instagram que celebra el amor por los perros y las mascotas. Incluye funciones como un editor de fotos, chat en tiempo real y un sistema de seguimiento de amigos.",
+            "picture": "/images/npm.webp"
+        },
+        {
+            "name": "Markdown Previewer",
+            "description": "Una sencilla aplicación convertidora-visualizadora de markdown creada para la certificación de desarrollo front-end de freeCodeCamp.",
+            "picture": "/images/projects/MarkdownPreviewer.png",
+            "github": "https://github.com/jodaz/markdown-previewer",
+            "href": "https://jodaz.github.io/markdown-previewer/"
         }
     ]
 }
