--- a/public/locales/es/about.json
+++ b/public/locales/es/about.json
@@ -3,6 +3,8 @@
     "bio": "¡Hola! Mi nombre es Jesús Ordosgoitty.\n\n Me considero un desarrollador Full―Stack enfocado en el Frontend con más de 4 años de experiencia en el campo. Me gusta aprender cosas nuevas y mantenerme actualizado en el mundo de la programación. Me gusta trabajar en proyectos ambiciosos junto a profesionales que se preocupan tanto por la calidad del desarrollo de software como yo. Por eso, siempre busco nuevas formas de mejorar mis habilidades.",
     "works": "Experiencia laboral",
     "skills": "Tech preferidas",
+    "social_media": "Redes sociales",
+    "social_media_desc": "Estoy bastante activo/a profesional y personalmente en las redes sociales. Si estás interesado/a, sígueme en las cuentas que te gusten.",
     "experiences": [
         {
             "business_name": "Tofu Lat.",
