Improve seo. translate metadata

--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -1,5 +1,6 @@
 {
     "page_title": "About me",
+    "page_url": "/about",
     "bio": "Hello! My name is Jesús Ordosgoitty.\n\n I consider myself a Full―Stack developer focused on the Frontend with over 4 years of experience in the field. I enjoy learning new things and staying up to date with Frontend development. I like working on ambitious projects alongside professionals who are as passionate about software development quality as I am. That's why I'm always looking for new ways to improve my skills.",
     "works": "Work experience",
     "skills": "Preferred techs",
