--- a/public/locales/en/projects.json
+++ b/public/locales/en/projects.json
@@ -1,5 +1,6 @@
 {
     "page_title": "Projects",
+    "page_url": "/projects",
     "page_description": "A selection of my best works - Currently building!",
     "projects": [
         {
