--- a/public/locales/es/projects.json
+++ b/public/locales/es/projects.json
@@ -1,5 +1,6 @@
 {
     "page_title": "Proyectos",
+    "page_url": "/projects",
     "page_description": "Una selección de mis mejores trabajos  - Página en construcción!",
     "projects": [
         {
