fix page title bug

--- a/public/locales/es/notfound.json
+++ b/public/locales/es/notfound.json
@@ -1,4 +1,5 @@
 {
+    "page_title": "Jesus Ordosgoitty - Desarrollador de Software",
     "not-found": "404 - La página no existe!",
     "back": "Volver"
 }
