update projects and about section

--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -8,10 +8,10 @@
     "social_media_desc": "I am pretty active professionally and personally on social media. If you are interested, follow me on the accounts you like.",
     "experiences": [
         {
-            "business_name": "Tofu Lat.",
+            "business_name": "Noriega Development",
             "positions": [
                 {
-                    "years": "Oct. 2023 ― Current",
+                    "years": "Apr. 2024 ― Current",
                     "title": "Freelance Full-Stack Developer"
                 }
             ]
