--- a/public/locales/es/about.json
+++ b/public/locales/es/about.json
@@ -8,10 +8,10 @@
     "social_media_desc": "Estoy bastante activo/a profesional y personalmente en las redes sociales. Si estás interesado/a, sígueme en las cuentas que te gusten.",
     "experiences": [
         {
-            "business_name": "Tofu Lat.",
+            "business_name": "Noriega Development",
             "positions": [
                 {
-                    "years": "Oct. 2023 ― Current",
+                    "years": "Abr. 2024 ― Actual",
                     "title": "Freelance Full-Stack Developer"
                 }
             ]
@@ -20,7 +20,7 @@
             "business_name": "Stampfeet Ltd.",
             "positions": [
                 {
-                    "years": "Sept. 2023 ― Current",
+                    "years": "Sept. 2023 ― Actual",
                     "title": "Desarrollador Frontend"
                 }
             ]
