--- a/public/locales/es/projects.json
+++ b/public/locales/es/projects.json
@@ -7,61 +7,71 @@
             "name": "Horsy.ai",
             "description": "Un motor de búsqueda impulsado por IA diseñado específicamente para descubrir podcasters de YouTube y su contenido.",
             "href": "https://horsy.ai",
-            "picture": "/images/projects/horsy.png"
+            "picture": "/images/projects/horsy.png",
+            "hidden": true
         },
         {
             "name": "VanguardDevs",
             "description": "Plantilla de sitio web diseñada para una agencia, con un mapa de la ubicación y mostrando los servicios admitidos.",
             "href": "https://www.vanguards.dev",
             "github": "https://github.com/VanguardDevs/vanguards.dev",
-            "picture": "/images/projects/VanguardDevs.png"
+            "picture": "/images/projects/VanguardDevs.png",
+            "hidden": false
         },
         {
             "name": "MiRewards",
             "description": "Rediseño de un sitio web para una agencia (Stampfeet), con un enfoque en apoyar un proceso de redención de recompensas y localización.",
             "picture": "/images/projects/MiRewards.png",
-            "href": "https://mi-rewards.com/"
+            "href": "https://mi-rewards.com/",
+            "hidden": true
         },
         {
             "name": "Approbado",
             "description": "Approbado es una aplicación web que ofrece una experiencia de aprendizaje electrónica gamificada basada en preguntas sobre temas relacionados con abogados.",
-            "picture": "/images/npm.webp"
+            "picture": "/images/npm.webp",
+            "hidden": true
         },
         {
             "name": "Circuito1App",
             "description": "C1A (CircuitoUnoApp) es una aplicación web construida como PWA, cuyo objetivo es registrar y rastrear el flujo de votantes en cinco gobiernos locales del Estado Sucre durante las elecciones parlamentarias venezolanas (2020).",
             "picture": "/images/npm.webp",
             "github": "https://github.com/jodaz/votes",
-            "href": "https://votes.jodaz.dev"
+            "href": "https://votes.jodaz.dev",
+            "hidden": false
         },
         {
             "name": "SAI Frontend",
             "description": "SAI es una aplicación web diseñada para optimizar y mejorar la gestión de servicios de atención social. Proporciona estadísticas y gráficos de asistencias para la toma de decisiones informadas y la asignación de recursos.",
             "github": "https://github.com/jodaz/sai-frontend",
-            "picture": "/images/npm.webp"
+            "picture": "/images/npm.webp",
+            "hidden": false
         },
         {
             "name": "Sauco",
             "description": "SAUCO es una plataforma CRM diseñada para la recolección y gestión de impuestos.",
             "github": "https://github.com/VanguardDevs/sauco",
-            "picture": "/images/npm.webp"
+            "picture": "/images/npm.webp",
+            "hidden": false
         },
         {
             "name": "TinderDogs Frontend",
             "description": "TinderDogs fue una aplicación única inspirada en la funcionalidad de Tinder. Diseñada para conectar amantes de mascotas y negocios locales de mascotas, esta plataforma ofrece una variedad de funciones para mejorar la experiencia de propiedad de mascotas.",
-            "picture": "/images/npm.webp"
+            "picture": "/images/npm.webp",
+            "hidden": false
         },
         {
             "name": "Perrfecto Frontend",
             "description": "Perrfecto es una aplicación de redes sociales inspirada en Instagram que celebra el amor por los perros y las mascotas. Incluye funciones como un editor de fotos, chat en tiempo real y un sistema de seguimiento de amigos.",
-            "picture": "/images/npm.webp"
+            "picture": "/images/npm.webp",
+            "hidden": false
         },
         {
             "name": "Markdown Previewer",
             "description": "Una sencilla aplicación convertidora-visualizadora de markdown creada para la certificación de desarrollo front-end de freeCodeCamp.",
             "picture": "/images/projects/MarkdownPreviewer.png",
             "github": "https://github.com/jodaz/markdown-previewer",
-            "href": "https://jodaz.github.io/markdown-previewer/"
+            "href": "https://jodaz.github.io/markdown-previewer/",
+            "hidden": false
         }
     ]
 }
